newclay/test/Compiler/Propagation/Fail/StaticArgumentPassedRuntimeValue/main.clay
foo(x:Int, #'n) = 'n;

main() = foo(1, 0);
